# Least-Cost-Path

./: CITATION.cff  Flow_Network_Analysis.ipynb  LCP.ipynb  LCP_VSH.py  LCP_one2all_base.ipynb  LICENSE  README.md  lcp.py  main.py  pyproject.toml  requirements.txt
.ipynb_checkpoints/: Flow_Network_Analysis-checkpoint.ipynb  LCP-checkpoint.ipynb  LCP_N2N-checkpoint.ipynb  README-checkpoint.md
data/: area-mask.dbf  area-mask.shp  area-mask.shx  cost.tif  points.dbf  points.shp  points.shx
lcp/: data_loader.py  pathfinder.py  processing.py  utils.py
lcp_parallel_tile/: config.py  geoutils.py  orchestrator.py  pathfinder.py  tasks.py  utils.py  worker.py
output/flow_network_session_20250919_012927/: ruta_tile_0_10__10335120__10336091.dbf  ruta_tile_0_10__10335120__10336091.shp  ruta_tile_0_10__10335120__10336091.shx  ruta_tile_0_10__16719659__10335120.dbf  ruta_tile_0_10__16719659__10335120.shp  ruta_tile_0_10__16719659__10335120.shx  ruta_tile_0_10__16719659__10336091.dbf  ruta_tile_0_10__16719659__10336091.shp  ruta_tile_0_10__16719659__10336091.shx  ruta_tile_0_10__16719659__16719859.dbf  ruta_tile_0_10__16719659__16719859.shp  ruta_tile_0_10__16719659__16719859.shx  ruta_tile_0_10__16719659__16720059.dbf  ruta_tile_0_10__16719659__16720059.shp  ruta_tile_0_10__16719659__16720059.shx  ruta_tile_0_10__16719659__16720259.dbf  ruta_tile_0_10__16719659__16720259.shp  ruta_tile_0_10__16719659__16720259.shx  ruta_tile_0_10__16719659__16720459.dbf  ruta_tile_0_10__16719659__16720459.shp  ruta_tile_0_10__16719659__16720459.shx  ruta_tile_0_10__16719659__3451520.dbf  (+4663 more)
(+952 files in other folders)
