[project]
name = "lcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fiona>=1.10.1",
    "geopandas>=1.1.1",
    "joblib>=1.5.2",
    "jupyterlab>=4.4.7",
    "matplotlib-scalebar>=0.9.0",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "psutil>=7.0.0",
    "rasterio>=1.4.3",
    "scikit-image>=0.25.2",
    "shapely>=2.1.1",
    "tqdm>=4.67.1",
]
